--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ colorama==0.4.4
 dnspython==2.1.0
 email-validator==1.1.3
 Flask==2.0.1
+Flask-Cors==3.0.10
+Flask-Login==0.5.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
